--- a/config/database.yml
+++ b/config/database.yml
@@ -28,8 +28,9 @@ development:
   database: review_development
   host: localhost
   pool: 5
-  username: 'vishwa'
-  password: 'vishwa'
+  username: root
+  password: root
+
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -65,8 +66,8 @@ test:
   database: review_test
   encoding: unicode  
   pool: 5
-  username: vishwa
-  password: vishwa
+  username: root
+  password: root
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
