--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "review",
   "private": true,
+  "scripts": {
+    "start":"./bin/webpack-dev-server --development"
+  },
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.0",
+    "@rails/webpacker": "^5.4.3",
     "axios": "^0.21.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "5.0.2",
